Fix #3229 "Home Page: text wraps in grid cells"

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-home.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-home.less
@@ -107,8 +107,13 @@
             background-color: @tableBackgroundAccent;
         }
 
+        td, th {
+            .xforms-output .xforms-output-output {
+                white-space: nowrap;
+            }
+        }
+
         th {
-            white-space: nowrap;
             min-width: 12px;
         }
 
